force-app/main/default/objects/Fitbit_Day__c/Fitbit_Day__c.object-meta.xml
<CustomObject>
    <label>Fitbit Day</label>
    <nameField>
        <displayFormat>FD{00000}</displayFormat>
        <label>Fitbit Day Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fitbit Days</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>