force-app/main/default/objects/Fitbit_Day__c/fields/Calories__c.field-meta.xml
<CustomField>
    <fullName>Calories__c</fullName>
    <label>Calories</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>