force-app/main/default/objects/Fitbit_Day__c/fields/Fitbit_Month__c.field-meta.xml
<CustomField>
    <fullName>Fitbit_Month__c</fullName>
    <label>Fitbit Month</label>
    <referenceTo>Fitbit_Month__c</referenceTo>
    <relationshipLabel>Fitbit Days</relationshipLabel>
    <relationshipName>Fitbit_Days</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>