force-app/main/default/objects/Fitbit_Day__c/fields/Is_Good_Day__c.field-meta.xml
<CustomField>
    <fullName>Is_Good_Day__c</fullName>
    <formula>Fitbit_Month__r.Fitbit_User__r.Target_Daily_Calories__c &lt;=  Calories__c ||
Fitbit_Month__r.Fitbit_User__r.Target_Daily_Minutes__c &lt;=  Total_Minutes__c ||
Fitbit_Month__r.Fitbit_User__r.Target_Daily_Distance__c &lt;= Distance__c ||
Fitbit_Month__r.Fitbit_User__r.Target_Daily_Floors__c &lt;= Floors__c ||
Fitbit_Month__r.Fitbit_User__r.Target_Daily_Steps__c &lt;= Steps__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Good Day?</label>
    <type>Checkbox</type>
</CustomField>